--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@ footer {
 </head>
 
 <body>
+<h2>บรรยากาศภายในวิทยาลัย</h2>
+<img src="images/images.jpg" width="400">
 
 <header>
     <h1>วิทยาลัยเทคโนโลยีชัยบาดาล</h1>
@@ -132,3 +134,4 @@ footer {
 
 </body>
 </html>
+
