--- a/index.html
+++ b/index.html
@@ -77,6 +77,27 @@ footer {
 </head>
 
 <body>
+<!-- ===== หน้าปกหลัก ===== -->
+<section>
+    <img src="banner.jpg" style="width:100%; height:auto;">
+</section>
+
+<!-- ===== หัวข้อบรรยากาศ ===== -->
+<section style="padding:40px; text-align:center;">
+    <h2 style="color:green;">บรรยากาศภายในวิทยาลัย</h2>
+    <p>ภาพบรรยากาศและสถานที่ภายในวิทยาลัยเทคโนโลยีชัยบาดาล</p>
+</section>
+
+<!-- ===== แกลเลอรีรูปภาพ ===== -->
+<section style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; padding:20px;">
+
+    <img src="atmos1.jpg" style="width:300px; border-radius:10px;">
+    <img src="atmos2.jpg" style="width:300px; border-radius:10px;">
+    <img src="atmos3.jpg" style="width:300px; border-radius:10px;">
+    <img src="atmos4.jpg" style="width:300px; border-radius:10px;">
+
+</section>
+เขียนถึง Kanyanat Tongdeemeesri
 
 <header>
     <h1>วิทยาลัยเทคโนโลยีชัยบาดาล</h1>
@@ -132,5 +153,6 @@ footer {
 
 </body>
 </html>
+
 
 
