--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ footer {
 <body>
 <!-- ===== หน้าปกหลัก ===== -->
 <section>
-    <img src="banner.jpg" style="width:100%; height:auto;">
+    <img src="banner.jpt.jpg" style="width:100%; height:auto;">
 </section>
 
 <!-- ===== หัวข้อบรรยากาศ ===== -->
@@ -153,6 +153,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
