--- a/index.html
+++ b/index.html
@@ -74,31 +74,38 @@ footer {
     padding: 20px;
 }
 </style>
-</head>
-<header>
+
+<body>
+
+<header style="background:#1a237e; color:white; text-align:center; padding:20px;">
     <h1>วิทยาลัยเทคโนโลยีชัยบาดาล</h1>
     <p>เรียนดี มีคุณภาพ ก้าวไกลสู่อาชีพในอนาคต</p>
 </header>
-<body>
-<!-- ===== หน้าปกหลัก ===== -->
+
+<!-- หน้าปก -->
 <section>
     <img src="banner.jpt.jpg" style="width:100%; height:auto;">
 </section>
 
-<!-- ===== หัวข้อบรรยากาศ ===== -->
+<!-- หัวข้อบรรยากาศ -->
 <section style="padding:40px; text-align:center;">
     <h2 style="color:green;">บรรยากาศภายในวิทยาลัย</h2>
     <p>ภาพบรรยากาศและสถานที่ภายในวิทยาลัยเทคโนโลยีชัยบาดาล</p>
 </section>
 
-<!-- ===== แกลเลอรีรูปภาพ ===== -->
+<!-- แกลเลอรี่ -->
 <section style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; padding:20px;">
-
     <img src="atmos1.jpg" style="width:300px; border-radius:10px;">
     <img src="atmos2.jpg" style="width:300px; border-radius:10px;">
     <img src="atmos3.jpg" style="width:300px; border-radius:10px;">
     <img src="atmos4.jpg" style="width:300px; border-radius:10px;">
+</section>
 
+</body>
+<header>
+    <h1>วิทยาลัยเทคโนโลยีชัยบาดาล</h1>
+    <p>เรียนดี มีคุณภาพ ก้าวไกลสู่อาชีพในอนาคต</p>
+</header>
 </section>
 
 <section>
@@ -150,6 +157,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
