--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ footer {
 
 <body>
 
+<!-- ส่วนหัวเว็บ -->
 <header style="background:#1a237e; color:white; text-align:center; padding:20px;">
     <h1>วิทยาลัยเทคโนโลยีชัยบาดาล</h1>
     <p>เรียนดี มีคุณภาพ ก้าวไกลสู่อาชีพในอนาคต</p>
@@ -84,15 +85,28 @@ footer {
 
 <!-- หน้าปก -->
 <section>
-    <img src="banner.jpt.jpg" style="width:100%; height:auto;">
+    <img src="banner_jpt.jpg" style="width:100%; height:auto;">
 </section>
 
-<!-- หัวข้อบรรยากาศ -->
+<!-- จุดเด่น -->
+<section style="padding:40px; text-align:center;">
+    <h2 style="color:blue;">จุดเด่นของวิทยาลัย</h2>
+    <p>รายละเอียดจุดเด่นของวิทยาลัยที่นี่...</p>
+</section>
+
+<!-- บรรยากาศ (วางต่อจากจุดเด่นเลย) -->
 <section style="padding:40px; text-align:center;">
     <h2 style="color:green;">บรรยากาศภายในวิทยาลัย</h2>
-    <p>ภาพบรรยากาศและสถานที่ภายในวิทยาลัยเทคโนโลยีชัยบาดาล</p>
+    <p>ภาพบรรยากาศและสถานที่ภายในวิทยาลัย</p>
 </section>
 
+<!-- รูป 4 รูป ให้อยู่ใต้หัวข้อบรรยากาศ -->
+<section style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; padding:20px;">
+    <img src="atmos1.jpg" style="width:300px; border-radius:10px;">
+    <img src="atmos2.jpg" style="width:300px; border-radius:10px;">
+    <img src="atmos3.jpg" style="width:300px; border-radius:10px;">
+    <img src="atmos4.jpg" style="width:300px; border-radius:10px;">
+</section>
 <header>
     <h1>วิทยาลัยเทคโนโลยีชัยบาดาล</h1>
     <p>เรียนดี มีคุณภาพ ก้าวไกลสู่อาชีพในอนาคต</p>
@@ -149,6 +163,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
