--- a/index.html
+++ b/index.html
@@ -88,33 +88,6 @@ footer {
     <img src="banner_jpt.jpg" style="width:100%; height:auto;">
 </section>
 
-<!-- จุดเด่น -->
-<section style="padding:40px; text-align:center;">
-    <h2 style="color:blue;">จุดเด่นของวิทยาลัย</h2>
-    <p>รายละเอียดจุดเด่นของวิทยาลัยที่นี่...</p>
-</section>
-
-<!-- บรรยากาศ (วางต่อจากจุดเด่นเลย) -->
-<section style="padding:40px; text-align:center;">
-    <h2 style="color:green;">บรรยากาศภายในวิทยาลัย</h2>
-    <p>ภาพบรรยากาศและสถานที่ภายในวิทยาลัย</p>
-</section>
-
-<!-- รูป 4 รูป ให้อยู่ใต้หัวข้อบรรยากาศ -->
-<section style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; padding:20px;">
-    <img src="atmos1.jpg" style="width:300px; border-radius:10px;">
-    <img src="atmos2.jpg" style="width:300px; border-radius:10px;">
-    <img src="atmos3.jpg" style="width:300px; border-radius:10px;">
-    <img src="atmos4.jpg" style="width:300px; border-radius:10px;">
-</section>
-<header>
-    <h1>วิทยาลัยเทคโนโลยีชัยบาดาล</h1>
-    <p>เรียนดี มีคุณภาพ ก้าวไกลสู่อาชีพในอนาคต</p>
-</header>
-</section>
-
-<section>
-
 <div class="card">
     <h2>📚 สาขาที่เปิดสอน</h2>
     <p>
@@ -132,15 +105,21 @@ footer {
         ✅ ฝึกงานกับสถานประกอบการชั้นนำ<br>
         ✅ มีกิจกรรมพัฒนาทักษะและทุนการศึกษา
     </p>
-<!-- แกลเลอรี่ -->
-<section style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; padding:20px;">
-    <img src="atmos1.jpg" style="width:300px; border-radius:10px;">
-    <img src="atmos2.jpg" style="width:300px; border-radius:10px;">
-    <img src="atmos3.jpg" style="width:300px; border-radius:10px;">
-    <img src="atmos4.jpg" style="width:300px; border-radius:10px;">
-</section>
+</div>
+<div class="card">
+    <h2>📸 บรรยากาศภายในวิทยาลัย</h2>
+<!-- บรรยากาศ -->
+<section style="padding:40px; text-align:center;">
+    <h2>📷 บรรยากาศภายในวิทยาลัย</h2>
+    <p>ภาพบรรยากาศและสถานที่ภายในวิทยาลัย</p>
 
-</body>
+    <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:20px;">
+        <img src="atmos1.jpg" style="width:300px; border-radius:10px;">
+        <img src="atmos2.jpg" style="width:300px; border-radius:10px;">
+        <img src="atmos3.jpg" style="width:300px; border-radius:10px;">
+        <img src="atmos4.jpg" style="width:300px; border-radius:10px;">
+    </div>
+</section>
 <div class="card">
     <h2>🎥 วิดีโอแนะนำวิทยาลัย</h2>
     <!-- เปลี่ยนลิงก์ YouTube ได้ -->
@@ -157,12 +136,13 @@ footer {
 
 <footer>
     <p>📍 อำเภอชัยบาดาล จังหวัดลพบุรี</p>
-    <p>📞 โทรศัพท์: 0xx-xxx-xxxx</p>
+    <p>📞 โทรศัพท์: 0801074300</p>
     <p>© 2026 วิทยาลัยเทคโนโลยีชัยบาดาล</p>
 </footer>
 
 </body>
 </html>
+
 
 
 
