--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ footer {
 
 <!-- หน้าปก -->
 <section>
-    <img src="banner_jpt.jpg" style="width:100%; height:auto;">
+    <img src="banner.jpt.jpg" style="width:100%; height:auto;">
 </section>
 
 <div class="card">
@@ -142,6 +142,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
