--- a/index.html
+++ b/index.html
@@ -83,11 +83,10 @@ footer {
     <p>เรียนดี มีคุณภาพ ก้าวไกลสู่อาชีพในอนาคต</p>
 </header>
 
-<!-- หน้าปก -->
+<!-- รูปใต้แถบสีน้ำเงิน -->
 <section>
     <img src="banner.jpt.jpg" style="width:100%; height:auto;">
 </section>
-
 <div class="card">
     <h2>📚 สาขาที่เปิดสอน</h2>
     <p>
@@ -142,6 +141,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
