--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ footer {
         🔹 การตลาด<br>
         🔹 เทคโนโลยีธุรกิจดิจิทัล<br>
         🔹 คอมพิวเตอร์ธุรกิจ
+        
     </p>
 </div>
 
@@ -122,10 +123,10 @@ footer {
 </section>
 <div class="card">
     <h2>🎥 วิดีโอแนะนำวิทยาลัย</h2>
-    <!-- เปลี่ยนลิงก์ YouTube ได้ -->
-    <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
-    title="วิดีโอแนะนำวิทยาลัย" 
-    frameborder="0" allowfullscreen></iframe>
+    <video width="100%" controls>
+        <source src="video.mp4" type="video/mp4">
+        เบราว์เซอร์ของคุณไม่รองรับวิดีโอ
+    </video>
 </div>
 
 <a href="https://www.facebook.com/" target="_blank" class="btn">
@@ -142,6 +143,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
