--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ footer {
     <h2>🎥 วิดีโอแนะนำวิทยาลัย</h2>
     <video width="100%" controls>
         <source src="video.mp4" type="video/mp4">
+    </video>
 </div>
 
 <a href="https://www.facebook.com/" target="_blank" class="btn">
@@ -141,6 +142,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
