--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@ footer {
         🔹 การตลาด<br>
         🔹 เทคโนโลยีธุรกิจดิจิทัล<br>
         🔹 คอมพิวเตอร์ธุรกิจ
+        🔹 ช่างยนต์<br>
+        🔹 ไฟฟ้ากำลัง<br>
+        🔹 การท่องเที่ยว<br>
+
         
     </p>
 </div>
@@ -144,6 +148,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
