--- a/index.html
+++ b/index.html
@@ -89,18 +89,16 @@ footer {
 
 </section>
 <div class="card">
-    <h2>📚 สาขาที่เปิดสอน</h2>
-    <p>
-        🔹 การบัญชี<br>
-        🔹 การตลาด<br>
-        🔹 เทคโนโลยีธุรกิจดิจิทัล<br>
-        🔹 คอมพิวเตอร์ธุรกิจ
-        🔹 ช่างยนต์<br>
-        🔹 ไฟฟ้ากำลัง<br>
-        🔹 การท่องเที่ยว<br>
-
-        
-    </p>
+  <h2>📚 สาขาที่เปิดสอน</h2>
+  <ul style="text-align:left; max-width:400px; margin:auto;">
+    <li>การบัญชี</li>
+    <li>การตลาด</li>
+    <li>เทคโนโลยีธุรกิจดิจิทัล</li>
+    <li>คอมพิวเตอร์ธุรกิจ</li>
+    <li>ช่างยนต์</li>
+    <li>ไฟฟ้ากำลัง</li>
+    <li>การท่องเที่ยว</li>
+  </ul>
 </div>
 
 <div class="card">
@@ -148,6 +146,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
